<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/includeSetupToolbar"
        layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_hostLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="32dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeSetupToolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/host_label" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_portLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="32dp"

        app:layout_constraintLeft_toLeftOf="@id/textInputLayout_hostLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_hostLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="number"

            android:hint="@string/port_label" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_is_secure_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:text="@string/secure_connection_check_box_label"

        app:layout_constraintLeft_toLeftOf="@id/textInputLayout_portLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_portLayout"
        />

    <Button
        android:id="@+id/bt_completeSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/complete_setup"

        app:layout_constraintTop_toBottomOf="@id/cb_is_secure_connection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>