<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/tv_light_label"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:text="light_friendly_name"

            style="@style/ThingTextViewCardLabel"
            />

        <TextView
            android:id="@+id/tv_light_state_label"

            android:text="@string/light_state"


            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_light_label"

            style="@style/ThingTextViewCardLabel"
            />

        <ImageView
            android:id="@+id/iv_light_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_margin="16dp"
            android:src="@drawable/color_light_icon"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Switch
            android:id="@+id/sw_light_state_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_light_icon"
            />

        <TextView
            android:id="@+id/tv_brightness_label"

            android:text="@string/light_brightness_label"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_light_state_label"

            style="@style/ThingTextViewCardLabel"
            />

        <SeekBar
            android:id="@+id/sb_light_brightness"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:max="100"

            app:layout_constraintBottom_toBottomOf="@id/tv_brightness_label"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/tv_color_temperature_label"

            android:text="@string/light_color_temperature_label"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_brightness_label"

            style="@style/ThingTextViewCardLabel"
            />

        <SeekBar
            android:id="@+id/sb_light_color_temperature"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:max="10000"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_color_temperature_label"
            />

        <TextView
            android:id="@+id/tv_color_label"

            android:text="@string/color_label"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_color_temperature_label"
            app:layout_constraintBottom_toBottomOf="parent"

            style="@style/ThingTextViewCardLabel"
            />

        <Button
            android:id="@+id/bt_chooseColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:text="@string/set_color_button_label"
            android:elevation="12dp"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:id="@+id/view_picked_color"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:background="@drawable/round_view"
            android:layout_margin="8dp"

            app:layout_constraintRight_toLeftOf="@+id/bt_chooseColor"
            app:layout_constraintBottom_toBottomOf="@+id/bt_chooseColor"
            />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>